Fix stack + add LR(0) shift and reduce

--- a/src/components/Stack/Stack.css
+++ b/src/components/Stack/Stack.css
@@ -1,16 +1,11 @@
 .Stack {
-  position: relative;
-  height: 100%;
-}
-
-.Stack_wrapper {
   position: absolute;
   bottom: 40px;
   left: 5%;
   width: 90%;
 }
 
-.Stack_wrapper > div {
+.Stack > div {
   background-color: #479BD4;
   color: #fafafa;
   font-weight: 900;
